--- a/public/style.css
+++ b/public/style.css
@@ -1,103 +1,37 @@
-/* Fix user-agent */
-
-* {
-  box-sizing: border-box;
+.chatView {
+  height: calc(100vh - 220px); 
+  padding: 16px 8px; 
+  overflow-y: auto;
+}
+.usersView {
+  height: calc(100vh - 220px); 
+  overflow-y: auto;
+}
+.padding-top-bottom {
+  padding: 3em;
 }
 
-html {
+.input {
+ font-size: 1.6em;
+}
+
+.title {
   font-weight: 300;
-  -webkit-font-smoothing: antialiased;
 }
 
-html, input {
-  font-family:
-    "HelveticaNeue-Light",
-    "Helvetica Neue Light",
-    "Helvetica Neue",
-    Helvetica,
-    Arial,
-    "Lucida Grande",
-    sans-serif;
+.navbar {
+  background-color: #d3d3d3;
+  line-height: 0.5em
 }
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+.field.is-grouped {
+  padding: 10px;
+  background-color: #d3d3d3;
 }
-
-ul {
-  list-style: none;
-  word-wrap: break-word;
-}
-
-/* Pages */
-
-.pages {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
-.page {
-  height: 100%;
-  position: absolute;
-  width: 100%;
-}
-
-/* Font */
-
-.messages {
-  font-size: 150%;
-}
-
-.inputMessage {
-  font-size: 100%;
-}
-
-.log {
-  color: gray;
-  font-size: 70%;
-  margin: 5px;
+.text-center {
   text-align: center;
 }
-
-/* Messages */
-
-.chatArea {
-  height: 100%;
-  padding-bottom: 60px;
-}
-
-.messages {
-  height: 100%;
-  margin: 0;
-  overflow-y: scroll;
-  padding: 10px 20px 10px 20px;
-}
-
-.message.typing .messageBody {
-  color: gray;
-}
-
-.username {
-  font-weight: 700;
-  overflow: hidden;
-  padding-right: 15px;
-  text-align: right;
-}
-
-/* Input */
-
-.inputMessage {
-  border: 10px solid #000;
-  bottom: 0;
-  height: 60px;
-  left: 0;
-  outline: none;
-  padding-left: 10px;
-  position: absolute;
-  right: 0;
-  width: 100%;
+.center-div {
+  margin-left: auto;
+  margin-right: auto;
 }
